FIX|header & scrollbar & login page (bug cause by bulma)

--- a/src/scss/base/_Explorastro.scss
+++ b/src/scss/base/_Explorastro.scss
@@ -19,7 +19,6 @@ body {
 
 /* Track scrollbar */
 ::-webkit-scrollbar-track {
-  // box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
   border: 4px solid $primary-color;
 }
@@ -29,4 +28,8 @@ body {
   background: $secondary-color;
   border-radius: 10px;
   border: 4px solid $primary-color;
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: inherit;
 }
