--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -30,6 +30,7 @@
       }
       &:hover {
         text-shadow: 1px 1px 2px $secondary-color, 0 0 0.5em $secondary-color, 0 0 0.2em rgb(187, 30, 207);
+        color: inherit;
       }
       &--active {
         text-shadow: 1px 1px 2px $secondary-color, 0 0 0.5em $secondary-color, 0 0 0.2em rgb(187, 30, 207);
